k8s/apps/streaming/download/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: download
  labels:
    pod-security.kubernetes.io/enforce: privileged
