k8s/apps/streaming/download/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-download-clients
  namespace: download
spec:
  strategy:
    type: Recreate
  template:
    spec:
      serviceAccountName: download-clients
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.1.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: qbittorrent-http
              containerPort: 8080
              protocol: TCP
            - name: torrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          resources:
            limits:
              squat.ai/tun: "1"
            requests:
              cpu: 50m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: qbittorrent-default-config
              mountPath: /config/qBittorrent/qBittorrent.conf
              subPath: qBittorrent.conf
            - name: qbittorrent-config-pv
              mountPath: /config
            - name: data
              mountPath: /downloads/torrents
              subPath: torrents
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:3.6.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: sabnzbd-http
              containerPort: 8090
              protocol: TCP
            - name: sabnzbd-api-http
              containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /downloads
              subPath: usenet
            - name: sabnzbd-config-pv
              mountPath: /config
            - name: sabnzbd-config
              mountPath: /config/sabnzbd.ini
              subPath: sabnzbd.ini
      volumes:
        - name: gluetun-config
          secret:
            secretName: qbittorrent-gluetun-config
        - name: qbittorrent-default-config
          configMap:
            name: qbittorrent-default-config
        - name: sabnzbd-config
          secret:
            secretName: sabnzbd-config-secret
        - name: qbittorrent-config-pv
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: sabnzbd-config-pv
          persistentVolumeClaim:
            claimName: sabnzbd-config-pvc
        - name: data
          nfs:
            path: /mnt/MAIN_POOL/data
            server: 192.168.1.244
