k8s/apps/streaming/download/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: download
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: download
spec:
  ports:
    - port: 8090
      protocol: TCP
      targetPort: 8090
      name: http
    - port: 9090
      protocol: TCP
      targetPort: 9090
      name: http-api
