k8s/apps/streaming/download/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-ui
  namespace: download
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - qbittorrent.lab.schaermu.ch
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
